# internal/app/server/http/models/login.go
@@ -1,6 +1,10 @@
 package models
 
-type Login struct {
+type LoginRequest struct {
 	Login    string `json:"login"`
 	Password string `json:"password"`
+}
+
+type LoginResponse struct {
+	Crt string `json:"crt"`
 }
